Minor improvements in `disk` part of guest config
- All parameters are set as named instead of a mix of named and
positioned parameters.
- `phy:` prefix is removed as outdated
- `target` parameter is moved to the end of the config

Signed-off-by: Ruslan Shymkevych <ruslan_shymkevych@epam.com>
Reviewed-by: Volodymyr_Babchuk<volodymyr_babchuk@epam.com>

--- a/meta-xt-prod-devel-rcar-control/recipes-guests/doma/files/doma-vdevices.cfg
+++ b/meta-xt-prod-devel-rcar-control/recipes-guests/doma/files/doma-vdevices.cfg
@@ -5,7 +5,9 @@
 vgsx = [ 'backend=DomD, osid=1' ]
 
 # Android uses disk with it's own partitions so no index after xvda
-disk = [ 'backend=DomD, phy:/dev/STORAGE_PART3, xvda' ]
+# Option `target` must be last element in list. For explanation see
+# https://xenbits.xenproject.org/docs/4.15-testing/man/xl-disk-configuration.5.html
+disk = [ 'backend=DomD, vdev=xvda, target=/dev/STORAGE_PART3' ]
 
 # We use predefined MAC addresses for domains:
 #  08:00:27:ff:cb:cd - domF
