--- a/meta-xt-prod-devel-rcar-control/recipes-guests/domu/files/domu-vdevices.cfg
+++ b/meta-xt-prod-devel-rcar-control/recipes-guests/domu/files/domu-vdevices.cfg
@@ -2,10 +2,15 @@
 # DomU virtual devices
 # =====================================================================
 
+# Note1:
 # See additional comment above line 'extra = ' in machine dependent config.
 # In case boot from network - comment out 'disk' AND use line with 'root=/dev/nfs' in machine dependent config.
 # In case boot from block device - uncomment 'disk' AND use line with 'root=/dev/xvda1' (or 'root=/dev/vda') in machine dependent config.
-disk = [ 'backend=DomD, phy:/dev/STORAGE_PART3, xvda1' ]
+#
+# Note2:
+# Option `target` must be last element in list. For explanation see
+# https://xenbits.xenproject.org/docs/4.15-testing/man/xl-disk-configuration.5.html
+disk = [ 'backend=DomD, vdev=xvda1, target=/dev/STORAGE_PART3' ]
 
 vgsx = [ 'backend=DomD, osid=1' ]
 
