dom0: Use domain's MAC from outer configuration
Signed-off-by: Ruslan Shymkevych <ruslan_shymkevych@epam.com>

--- a/meta-xt-prod-devel-rcar-control/recipes-guests/domu/files/domu-vdevices.cfg
+++ b/meta-xt-prod-devel-rcar-control/recipes-guests/domu/files/domu-vdevices.cfg
@@ -14,11 +14,8 @@ disk = [ 'backend=DomD, vdev=xvda1, target=/dev/STORAGE_PART3' ]
 
 vgsx = [ 'backend=DomD, osid=1' ]
 
-# We use predefined MAC addresses for domains:
-#  08:00:27:ff:cb:cd - domF
-#  08:00:27:ff:cb:ce - domA
-#  08:00:27:ff:cb:cf - domU
-vif = [ 'backend=DomD, bridge=xenbr0, mac=08:00:27:ff:cb:cf' ]
+# MAC value is written by recipe according to domain' settings
+vif = [ 'backend=DomD, bridge=xenbr0, mac=MAC_FOR_DOMAIN' ]
 
 vdispl = [ 'backend=DomD, be-alloc=0, connectors=1000:1920x1080' ]
 
