--- a/meta-xt-prod-devel-rcar-control/recipes-guests/doma/files/doma-vdevices.cfg
+++ b/meta-xt-prod-devel-rcar-control/recipes-guests/doma/files/doma-vdevices.cfg
@@ -9,11 +9,8 @@ vgsx = [ 'backend=DomD, osid=1' ]
 # https://xenbits.xenproject.org/docs/4.15-testing/man/xl-disk-configuration.5.html
 disk = [ 'backend=DomD, vdev=xvda, target=/dev/STORAGE_PART3' ]
 
-# We use predefined MAC addresses for domains:
-#  08:00:27:ff:cb:cd - domF
-#  08:00:27:ff:cb:ce - domA
-#  08:00:27:ff:cb:cf - domU
-vif = [ 'backend=DomD, bridge=xenbr0, mac=08:00:27:ff:cb:ce' ]
+# MAC value is written by recipe according to domain' settings
+vif = [ 'backend=DomD, bridge=xenbr0, mac=MAC_FOR_DOMAIN' ]
 
 # connector 2000 - main android connector on second display (1920x1080)
 # connector 2001 - second android connector on first display (1024x576)
