--- a/prod-devel-rcar.yaml
+++ b/prod-devel-rcar.yaml
@@ -309,6 +309,17 @@ parameters:
           XT_OP_TEE_FLAVOUR: "salvator_h3_4x2g"
           XT_DOMD_DTB_NAME: "r8a7795-salvator-xs-4x2g-domd.dtb"
           XT_XEN_DTB_NAME: "r8a7795-salvator-xs-4x2g-xen.dtb"
+    salvator-x-h3-4x2g:
+      overrides:
+        variables:
+          MACHINE: "salvator-x"
+          SOC_FAMILY: "r8a7795"
+          XT_DOMD_CONFIG_NAME: "domd-salvator-x-h3-4x2g.cfg"
+          XT_DOMU_CONFIG_NAME: "domu-generic-h3-4x2g.cfg"
+          XT_DOMA_CONFIG_NAME: "doma-generic-h3-4x2g.cfg"
+          XT_OP_TEE_FLAVOUR: "salvator_h3_4x2g"
+          XT_DOMD_DTB_NAME: "r8a7795-salvator-x-4x2g-domd.dtb"
+          XT_XEN_DTB_NAME: "r8a7795-salvator-x-4x2g-xen.dtb"
     salvator-x-h3:
       overrides:
         variables:
