--- a/meta-xt-prod-devel-rcar-control/recipes-guests/domd/files/domd-salvator-x-h3-4x2g.cfg
+++ b/meta-xt-prod-devel-rcar-control/recipes-guests/domd/files/domd-salvator-x-h3-4x2g.cfg
@@ -16,7 +16,7 @@ device_tree = "/usr/lib/xen/boot/domd.dtb"
 # Uncomment this when using nfs as a boot device
 #extra = "root=/dev/nfs nfsroot=192.168.1.100:/srv/domd,vers=3 ip=dhcp rw rootwait console=hvc0 pvrsrvkm.DriverMode=0 xt_page_pool=67108864 xt_cma=100663296"
 # Uncomment this when using block device as a boot device
-extra = "root=/dev/STORAGE_PART2 rw rootwait console=hvc0 pvrsrvkm.DriverMode=0 xt_page_pool=67108864 xt_cma=100663296"
+extra = "video=VGA-1:d video=LVDS-1:d root=/dev/STORAGE_PART2 rw rootwait console=hvc0 pvrsrvkm.DriverMode=0 xt_page_pool=67108864 xt_cma=100663296"
 
 # Initial memory allocation (MB)
 memory = 2048
