Add `meta-renesas` to the list of sources of `domu`
Signed-off-by: Ruslan Shymkevych <ruslan_shymkevych@epam.com>
Reviewed-by: Volodymyr Babchuk <volodymyr_babchuk@epam.com>

--- a/prod-devel-rcar.yaml
+++ b/prod-devel-rcar.yaml
@@ -228,6 +228,9 @@ components:
     build-dir: "%{YOCTOS_WORK_DIR}"
     sources:
       - *COMMON_SOURCES
+      - type: git
+        url: https://github.com/xen-troops/meta-renesas.git
+        rev: "Renesas-Yocto-v5.1-patched"
     builder:
       type: yocto
       work_dir: "%{DOMU_BUILD_DIR}"
