--- a/prod-devel-rcar.yaml
+++ b/prod-devel-rcar.yaml
@@ -190,6 +190,9 @@ components:
       - type: git
         url: git://git.yoctoproject.org/meta-selinux
         rev: dunfell
+      - type: git
+        url: "https://github.com/xen-troops/meta-xt-prod-devel-rcar.git"
+        rev: master
     builder:
       type: yocto
       work_dir: "%{DOMD_BUILD_DIR}"
@@ -217,6 +220,7 @@ components:
         - "../meta-xt-common/meta-xt-driver-domain"
         - "../meta-xt-rcar/meta-xt-rcar-fixups"
         - "../meta-xt-rcar/meta-xt-rcar-driver-domain"
+        - "../meta-xt-prod-devel-rcar/meta-xt-prod-devel-rcar-driver-domain"
       target_images:
         - "tmp/deploy/images/%{MACHINE}/Image"
         - "tmp/deploy/images/%{MACHINE}/xen-%{MACHINE}.uImage"
@@ -550,6 +554,7 @@ parameters:
             builder:
               layers:
                 - " ../meta-aos"
+                - "../meta-xt-prod-devel-rcar/meta-aos-tune"
               conf:
                 - [AOS_VIS_PLUGINS, "telemetryemulatoradapter"]
                 - [DISTRO_FEATURES_append, " vis"]
