--- a/prod-devel-rcar.yaml
+++ b/prod-devel-rcar.yaml
@@ -385,8 +385,8 @@ parameters:
         variables:
           MACHINE: "h3ulcb"
           SOC_FAMILY: "r8a7795"
-          XT_DOMD_CONFIG_NAME: "domd-h3ulcb.cfg"
-          XT_DOMU_CONFIG_NAME: "domu-generic-h3.cfg"
+          XT_DOMD_CONFIG_NAME: "domd-h3ulcb-4x2g.cfg"
+          XT_DOMU_CONFIG_NAME: "domu-generic-h3-4x2g.cfg"
           XT_DOMA_CONFIG_NAME: "doma-generic-h3-4x2g.cfg"
           XT_OP_TEE_FLAVOUR: "salvator_h3_4x2g"
           XT_DOMD_DTB_NAME: "r8a77951-h3ulcb-4x2g-domd.dtb"
@@ -397,7 +397,7 @@ parameters:
           MACHINE: "h3ulcb"
           SOC_FAMILY: "r8a7795"
           XT_DOMD_CONFIG_NAME: "domd-h3ulcb-4x2g-kf.cfg"
-          XT_DOMU_CONFIG_NAME: "domu-generic-h3.cfg"
+          XT_DOMU_CONFIG_NAME: "domu-generic-h3-4x2g.cfg"
           XT_DOMA_CONFIG_NAME: "doma-generic-h3-4x2g.cfg"
           XT_OP_TEE_FLAVOUR: "salvator_h3_4x2g"
           XT_DOMD_DTB_NAME: "r8a77951-h3ulcb-4x2g-kf-domd.dtb"
@@ -421,7 +421,7 @@ parameters:
           MACHINE: "h3ulcb"
           SOC_FAMILY: "r8a7795"
           XT_DOMD_CONFIG_NAME: "domd-h3ulcb-4x2g-ab.cfg"
-          XT_DOMU_CONFIG_NAME: "domu-generic-h3.cfg"
+          XT_DOMU_CONFIG_NAME: "domu-generic-h3-4x2g.cfg"
           XT_DOMA_CONFIG_NAME: "doma-generic-h3-4x2g.cfg"
           XT_OP_TEE_FLAVOUR: "salvator_h3_4x2g"
           XT_DOMD_DTB_NAME: "r8a77951-h3ulcb-4x2g-ab-domd.dtb"
