--- a/prod-devel-rcar.yaml
+++ b/prod-devel-rcar.yaml
@@ -1,5 +1,5 @@
 desc: "Xen-Troops development setup for Renesas RCAR Gen3 hardware"
-min_ver: "0.4"
+min_ver: "0.6"
 
 variables:
   YOCTOS_WORK_DIR: "yocto"
@@ -257,12 +257,33 @@ components:
       target_images:
         - "tmp/deploy/images/%{MACHINE}/Image"
         - "tmp/deploy/images/%{MACHINE}/core-image-weston-%{MACHINE}.ext4"
+
+  doma_kernel:
+    build-dir: "android_kernel"
+    sources:
+      - type: repo
+        url: https://github.com/xen-troops/android_kernel_manifest.git
+        rev: common-android12-5.4-xt-master
+        manifest: default.xml
+        depth: 1
+        groups: all
+        dir: "."
+    builder:
+      type: android_kernel
+      env:
+        - "TARGET_BOARD_PLATFORM=%{SOC_FAMILY}"
+        - "BUILD_CONFIG=common/build.config.xenvm"
+        - "SKIP_MRPROPER=1"
+      target_images:
+        - "out/android12-5.4/common/arch/arm64/boot/Image"
+        - "out/android12-5.4/staging/vendor/lib/modules/pvrsrvkm.ko"
+
   doma:
     build-dir: "android"
     sources:
       - type: repo
         url: https://github.com/xen-troops/android_manifest.git
-        rev: android-11-master
+        rev: android-12-master
         manifest: doma.xml
         depth: 1
         groups: all
@@ -271,12 +292,17 @@ components:
       type: android
       env:
         - "TARGET_BOARD_PLATFORM=%{SOC_FAMILY}"
+        - "TARGET_PREBUILT_KERNEL=../android_kernel/out/android12-5.4/common/arch/arm64/boot/Image"
+        - "DDK_KM_PREBUILT_MODULE=../android_kernel/out/android12-5.4/staging/vendor/lib/modules/pvrsrvkm.ko"
       lunch_target: xenvm-userdebug
       target_images:
         - "out/target/product/xenvm/boot.img"
         - "out/target/product/xenvm/super.img"
         - "out/target/product/xenvm/userdata.img"
         - "out/target/product/xenvm/vbmeta.img"
+        - "out/target/product/xenvm/system.img"
+      additional_deps:
+        - "../android_kernel/out/android12-5.4/common/arch/arm64/boot/Image"
 
 images:
   full:
