yaml: add unpacking support for doma graphics prebuilds
Archive with graphics prebuilds(rcar-prebuilts-graphics-xt-doma.tar.gz)
should be placed in the same directory as yaml file.
The contents of that archive will be unpacked to the android/eva.

Signed-off-by: Andrii Chepurnyi <andrii_chepurnyi@epam.com>
Reviewed-by: Ruslan Shymkevych <ruslan_shymkevych@epam.com>

--- a/prod-devel-rcar.yaml
+++ b/prod-devel-rcar.yaml
@@ -1,5 +1,5 @@
 desc: "Xen-Troops development setup for Renesas RCAR Gen3 hardware"
-min_ver: "0.6"
+min_ver: "0.7"
 
 variables:
   YOCTOS_WORK_DIR: "yocto"
@@ -618,11 +618,16 @@ parameters:
     "yes":
       overrides:
         variables:
-          XT_DOMA_DDK_KM_PREBUILT_MODULE: "../eva/pvr-km/pvrsrvkm.ko"
+          XT_DOMA_DDK_KM_PREBUILT_MODULE: "eva/pvr-km/pvrsrvkm.ko"
           XT_DOMA_KERNEL_EXTRA_MODULES: ""
           XT_DOMA_SOURCE_GROUP: "default"
         components:
           doma:
+            sources:
+              - type: unpack
+                file: rcar-prebuilts-graphics-xt-doma.tar.gz
+                dir: eva
+                archive_type: tar
             builder:
               env:
-                - "DDK_UM_PREBUILDS=../eva/pvr-um"
+                - "DDK_UM_PREBUILDS=eva/pvr-um"
