yaml: Switch meta-aos to a new repository
The old proprietary repository is not supported anymore,
so we switch to the new shiny repo on Github.

Signed-off-by: Ruslan Shymkevych <ruslan_shymkevych@epam.com>

--- a/prod-devel-rcar.yaml
+++ b/prod-devel-rcar.yaml
@@ -583,8 +583,8 @@ parameters:
           domd:
             sources:
               - type: git
-                url: "ssh://git@gitpct.epam.com/epmd-aepr/meta-aos"
-                rev: master
+                url: "https://github.com/aoscloud/meta-aos"
+                rev: main
             builder:
               layers:
                 - "../meta-aos"
