yaml: Minor fix of AOS VIS description
AOS VIS components have open sources, so fix the description
of the option accordingly.

Signed-off-by: Ruslan Shymkevych <ruslan_shymkevych@epam.com>
Reviewed-by: Andrii Chepurnyi <andrii_chepurnyi@epam.com>

--- a/prod-devel-rcar.yaml
+++ b/prod-devel-rcar.yaml
@@ -574,7 +574,7 @@ parameters:
                 # Mask MMP recipes
                 - [BBMASK_append, "|kernel-module-uvcs-drv|omx-user-module"]
   ENABLE_AOS_VIS:
-    desc: "Enable non open source aos-vis service"
+    desc: "Enable AOS VIS service"
     "no":
       default: true
     "yes":
