--- a/prod-devel-rcar.yaml
+++ b/prod-devel-rcar.yaml
@@ -247,6 +247,8 @@ components:
         - *COMMON_CONF
         - *DOMD_DOMU_CONF
         - [XT_DOM_NAME, "domu"]
+        - [EXTRA_IMAGEDEPENDS_remove, "arm-trusted-firmware"]
+        - [EXTRA_IMAGEDEPENDS_remove, "optee-os"]
 
       layers:
         - "../meta-openembedded/meta-oe"
