Set systemd init manager by INIT_MANAGER variable
Changing the init system manager previously required setting a number of
different variables. Now it can be changed by setting the INIT_MANAGER variable.
It sets the following group of variables by calling init-manager-systemd.inc:
    DISTRO_FEATURES_append = " systemd"
    DISTRO_FEATURES_BACKFILL_CONSIDERED_append = " sysvinit"
    VIRTUAL-RUNTIME_init_manager ??= "systemd"
    VIRTUAL-RUNTIME_initscripts ??= "systemd-compat-units"
    VIRTUAL-RUNTIME_login_manager ??= "shadow-base"

Signed-off-by: Oleksandr Grytsov <oleksandr_grytsov@epam.com>
Acked-by: Volodymyr Babchuk <volodymyr_babchuk@epam.com>
Acked-by: Ruslan Shymkevych <ruslan_shymkevych@epam.com>

--- a/prod-devel-rcar.yaml
+++ b/prod-devel-rcar.yaml
@@ -65,8 +65,7 @@ common_data:
     - [SOC_FAMILY, "%{SOC_FAMILY}"]
 
     # Add systemd configuration
-    - [DISTRO_FEATURES_append, " systemd"]
-    - [VIRTUAL-RUNTIME_init_manager, "systemd"]
+    - [INIT_MANAGER, "systemd"]
 
     # add the static lib to SDK toolchain
     - [SDKIMAGE_FEATURES_append, " staticdev-pkgs"]
@@ -157,8 +156,7 @@ components:
                 sysvinit"]
 
         # Enable systemd on dom0
-        - [DISTRO_FEATURES_append, " systemd"]
-        - [VIRTUAL-RUNTIME_init_manager, "systemd"]
+        - [INIT_MANAGER, "systemd"]
 
         # Do not install kernel image to rootfs to decrease initrd size
         - ["RDEPENDS_${KERNEL_PACKAGE_NAME}-base", ""]
