yaml: remove `|` from BBMASK
BBMASK is space separated list of regular expressions.
So it's possible to use `|`, but space is more proper
separator. Also spaces increase readability.

Signed-off-by: Ruslan Shymkevych <ruslan_shymkevych@epam.com>
Acked-by: Volodymyr Babchuk <volodymyr_babchuk@epam.com>

--- a/prod-devel-rcar.yaml
+++ b/prod-devel-rcar.yaml
@@ -428,7 +428,7 @@ parameters:
                 - "../meta-xt-rcar/meta-xt-cogent-fixups"
               conf:
                 # Ignore OP-TEE patches as we have own OP-TEE
-                -  [BBMASK_append, "|meta-rcar-gen3-adas/recipes-bsp/optee"]
+                -  [BBMASK_append, " meta-rcar-gen3-adas/recipes-bsp/optee"]
     h3ulcb-4x2g-ab:
       overrides:
         variables:
@@ -576,7 +576,7 @@ parameters:
             builder:
               conf:
                 # Mask MMP recipes
-                - [BBMASK_append, "|kernel-module-uvcs-drv|omx-user-module"]
+                - [BBMASK_append, " kernel-module-uvcs-drv omx-user-module"]
     "yes":
       overrides:
         variables:
