domu: remove u-boot from build as not used
Signed-off-by: Ruslan Shymkevych <ruslan_shymkevych@epam.com>
Reviewed-by: Volodymyr Babchuk <volodymyr_babcbuk@epam.com>

--- a/prod-devel-rcar.yaml
+++ b/prod-devel-rcar.yaml
@@ -251,6 +251,7 @@ components:
         - [XT_DOM_NAME, "domu"]
         - [EXTRA_IMAGEDEPENDS_remove, "arm-trusted-firmware"]
         - [EXTRA_IMAGEDEPENDS_remove, "optee-os"]
+        - [EXTRA_IMAGEDEPENDS_remove, "u-boot"]
 
       layers:
         - "../meta-openembedded/meta-oe"
