prod-devel-rcar.yaml: Switch to Renesas BSP v5.9.0
The "Renesas-Yocto-v5.9-patched" branch is based on the latest
commit from meta-renesas' "dunfell-dev" branch:
39334aeb54b167da09e108e9a654f852da48da68
"rcar-gen3: optee_os: Update SRCREV to Rev3.0.5"

Please note, that "Renesas-Yocto-v5.9-patched" is patched
to revert recent changes to graphic recipies in order to be able
to still use DDK v1.11 with new BSP version for now.

Tested on salvator-x-h3-4x2g machine only.

Signed-off-by: Oleksandr Tyshchenko <oleksandr_tyshchenko@epam.com>

--- a/prod-devel-rcar.yaml
+++ b/prod-devel-rcar.yaml
@@ -97,8 +97,8 @@ common_data:
     # Add Capacity Aware migration Strategy (CAS)
     - [MACHINE_FEATURES_append, " cas"]
 
-    # Remove ptest to reduce the build time
-    - [DISTRO_FEATURES_remove, "ptest"]
+    # Remove x11 and vulkan to avoid error after removing mesa
+    - [DISTRO_FEATURES_remove, " ptest x11 vulkan"]
 
     # HACK: force ipk instead of rpm b/c it makes troubles to PVR UM build otherwise
     - [PACKAGE_CLASSES, "package_ipk"]
@@ -189,7 +189,7 @@ components:
       - *COMMON_SOURCES
       - type: git
         url: https://github.com/xen-troops/meta-renesas.git
-        rev: "Renesas-Yocto-v5.1-patched"
+        rev: "Renesas-Yocto-v5.9-patched"
       - type: git
         url: https://git.yoctoproject.org/meta-selinux
         rev: dunfell
@@ -244,7 +244,7 @@ components:
       - *COMMON_SOURCES
       - type: git
         url: https://github.com/xen-troops/meta-renesas.git
-        rev: "Renesas-Yocto-v5.1-patched"
+        rev: "Renesas-Yocto-v5.9-patched"
     builder:
       type: yocto
       work_dir: "%{DOMU_BUILD_DIR}"
