--- a/prod-devel-rcar.yaml
+++ b/prod-devel-rcar.yaml
@@ -38,11 +38,11 @@ common_data:
       url: "https://git.yoctoproject.org/meta-virtualization"
       rev: dunfell
     - type: git
-      url: "https://github.com/xen-troops/meta-xt-common.git"
-      rev: master
+      url: "https://github.com/otyshchenko1/meta-xt-common.git"
+      rev: my_devel
     - type: git
-      url: "https://github.com/xen-troops/meta-xt-rcar.git"
-      rev: master
+      url: "https://github.com/otyshchenko1/meta-xt-rcar.git"
+      rev: my_devel
   # Common configuration options for all yocto-based domains
   conf: &COMMON_CONF
     - [SSTATE_DIR, "${TOPDIR}/../common_data/sstate"]
@@ -130,8 +130,8 @@ components:
     sources:
       - *COMMON_SOURCES
       - type: git
-        url: "https://github.com/xen-troops/meta-xt-prod-devel-rcar.git"
-        rev: master
+        url: "https://github.com/otyshchenko1/meta-xt-prod-devel-rcar.git"
+        rev: my_devel
     builder:
       type: yocto
       work_dir: "%{DOM0_BUILD_DIR}"
@@ -194,8 +194,8 @@ components:
         url: https://git.yoctoproject.org/meta-selinux
         rev: dunfell
       - type: git
-        url: "https://github.com/xen-troops/meta-xt-prod-devel-rcar.git"
-        rev: master
+        url: "https://github.com/otyshchenko1/meta-xt-prod-devel-rcar.git"
+        rev: my_devel
     builder:
       type: yocto
       work_dir: "%{DOMD_BUILD_DIR}"
