--- a/prod-devel-rcar.yaml
+++ b/prod-devel-rcar.yaml
@@ -38,11 +38,11 @@ common_data:
       url: "https://git.yoctoproject.org/meta-virtualization"
       rev: kirkstone
     - type: git
-      url: "https://github.com/xen-troops/meta-xt-common.git"
-      rev: master
+      url: "https://github.com/otyshchenko1/meta-xt-common.git"
+      rev: for_xt
     - type: git
-      url: "https://github.com/xen-troops/meta-xt-rcar.git"
-      rev: master
+      url: "https://github.com/otyshchenko1/meta-xt-rcar.git"
+      rev: for_xt
   # Common configuration options for all yocto-based domains
   conf: &COMMON_CONF
     - [SSTATE_DIR, "${TOPDIR}/../common_data/sstate"]
@@ -136,8 +136,8 @@ components:
     sources:
       - *COMMON_SOURCES
       - type: git
-        url: "https://github.com/xen-troops/meta-xt-prod-devel-rcar.git"
-        rev: master
+        url: "https://github.com/otyshchenko1/meta-xt-prod-devel-rcar.git"
+        rev: for_xt
     builder:
       type: yocto
       work_dir: "%{DOM0_BUILD_DIR}"
@@ -200,8 +200,8 @@ components:
         url: https://git.yoctoproject.org/meta-selinux
         rev: kirkstone
       - type: git
-        url: "https://github.com/xen-troops/meta-xt-prod-devel-rcar.git"
-        rev: master
+        url: "https://github.com/otyshchenko1/meta-xt-prod-devel-rcar.git"
+        rev: for_xt
     builder:
       type: yocto
       work_dir: "%{DOMD_BUILD_DIR}"
