agl: add meta-agl-tune layer
This layer contains files that were:
 - copied as-is or adopted from AGL layer
   meta-agl/meta-agl-bsp/meta-rcar-gen3;
 - developed by EPAM.

We can't use meta-agl-bsp due to lots of conflicts in
handling of prebuilt binaries and duplication of
functionality with out layers.
So we bbmask'ed meta-agl-bsp/meta-rcar-gen3 and manually
cherry-picked some required files.

Pay attention that layer has increased priority. This is
needed to override linux/defconfig provided by product.

For the authorship of different files please see README.md
inside this layer.

Signed-off-by: Ruslan Shymkevych <ruslan_shymkevych@epam.com>

--- a/prod-devel-rcar-agl.yaml
+++ b/prod-devel-rcar-agl.yaml
@@ -342,6 +342,8 @@ components:
         - "../meta-xt-rcar/meta-xt-rcar-domx"
         - "../meta-xt-rcar/meta-xt-rcar-gles_common"
         - "../meta-xt-prod-devel-rcar/meta-xt-prod-devel-rcar-driver-domain"
+        - "../meta-xt-prod-devel-rcar/meta-agl-tune"
+
       target_images:
         - "tmp/deploy/images/%{MACHINE}/Image"
         - "tmp/deploy/images/%{MACHINE}/xen-%{MACHINE}.uImage"
