prod-devel-rcar.yaml: Switch meta-rcar to v5.9.0 based branch
This is needed to update the support of h3ulcb-4x2g-kf machine
to the Renesas BSP v5.9.0.

Preferably to be squashed with:
"prod-devel-rcar.yaml: Switch to Renesas BSP v5.9.0"

Signed-off-by: Oleksandr Tyshchenko <oleksandr_tyshchenko@epam.com>

--- a/prod-devel-rcar.yaml
+++ b/prod-devel-rcar.yaml
@@ -423,8 +423,8 @@ parameters:
           domd:
             sources:
               - type: git
-                url: "https://github.com/CogentEmbedded/meta-rcar.git"
-                rev: v5.1.0
+                url: "https://github.com/xen-troops/meta-rcar.git"
+                rev: Renesas-Yocto-v5.9-patched
             builder:
               layers:
                 - "../meta-rcar/meta-rcar-gen3-adas"
