bsp 5.9: get rid of '-patched' branches
Use `dunfell-dev` branch for renesas-rcar/meta-renesas repo.
Use `Renesas-Yocto-v5.9-dunfell-dev` branch for xen-troops/meta-rcar.

This commit requires a commit
'bsp 5.9: Changes required to support DDK 1.11'
to be merged in meta-xt-rcar repo.

Signed-off-by: Ruslan Shymkevych <ruslan_shymkevych@epam.com>

--- a/prod-devel-rcar.yaml
+++ b/prod-devel-rcar.yaml
@@ -194,8 +194,8 @@ components:
     sources:
       - *COMMON_SOURCES
       - type: git
-        url: https://github.com/xen-troops/meta-renesas.git
-        rev: "Renesas-Yocto-v5.9-patched"
+        url: https://github.com/renesas-rcar/meta-renesas.git
+        rev: "dunfell-dev"
       - type: git
         url: https://git.yoctoproject.org/meta-selinux
         rev: dunfell
@@ -249,8 +249,8 @@ components:
     sources:
       - *COMMON_SOURCES
       - type: git
-        url: https://github.com/xen-troops/meta-renesas.git
-        rev: "Renesas-Yocto-v5.9-patched"
+        url: https://github.com/renesas-rcar/meta-renesas.git
+        rev: "dunfell-dev"
     builder:
       type: yocto
       work_dir: "%{DOMU_BUILD_DIR}"
@@ -431,7 +431,7 @@ parameters:
             sources:
               - type: git
                 url: "https://github.com/xen-troops/meta-rcar.git"
-                rev: Renesas-Yocto-v5.9-patched
+                rev: Renesas-Yocto-v5.9-dunfell-dev
             builder:
               layers:
                 - "../meta-rcar/meta-rcar-gen3-adas"
