--- a/prod-devel-rcar.yaml
+++ b/prod-devel-rcar.yaml
@@ -85,7 +85,7 @@ common_data:
     - [PREFERRED_PROVIDER_virtual/mesa, ""]
     - [PREFERRED_PROVIDER_virtual/libgbm, "libgbm"]
     - [PREFERRED_PROVIDER_libgbm-dev, "libgbm"]
-    - [BBMASK, "mesa-gl"]
+    - [BBMASK_append, " mesa-gl"]
 
     # Add for gstreamer plugins ugly
     - [LICENSE_FLAGS_WHITELIST, "commercial"]
