--- a/prod-devel-rcar.yaml
+++ b/prod-devel-rcar.yaml
@@ -1,5 +1,5 @@
 desc: "Xen-Troops development setup for Renesas RCAR Gen3 hardware"
-min_ver: "0.9"
+min_ver: "0.13"
 
 variables:
   YOCTOS_WORK_DIR: "yocto"
@@ -330,7 +330,7 @@ components:
     builder:
       type: zephyr
       board: xenvm
-      target: samples/synchronization
+      target: zephyr/samples/synchronization
       target_images:
         - "zephyr/build/zephyr/zephyr.bin"
 
