prod-devel-rcar.yaml: Introduce XT_USE_DDK1_11 to be able to use old DDK
By default, the XT_USE_DDK1_11 is set "1" in case of DomA build.

So all bbappends located at meta-xt-rcar-fixups layer (which purpose
is to switch back to old DDK version) get masked if XT_USE_DDK1_11
is set to "0" (DomU build).

Please see corresponding patches to meta-xt-rcar layer which add
XT_USE_DDK1_11 handling.

Suggested-by: Volodymyr Babchuk <volodymyr_babchuk@epam.com>
Signed-off-by: Oleksandr Tyshchenko <oleksandr_tyshchenko@epam.com>
Acked-by: Volodymyr Babchuk <volodymyr_babchuk@epam.com>
---
Was "prod-devel-rcar.yaml: Use BBMASK for bbappends that downgrade to DDK v1.11"
---

--- a/prod-devel-rcar.yaml
+++ b/prod-devel-rcar.yaml
@@ -25,6 +25,7 @@ variables:
   XT_DOMZ_CONFIG_NAME: "domz-generic.cfg"
   XT_MULTIMEDIA_EVA_DIR : ""
   XT_PREBUILT_GSX_DIR: ""
+  XT_USE_DDK1_11: "0"
 common_data:
   # Sources used by all yocto-based domains
   sources: &COMMON_SOURCES
@@ -108,6 +109,13 @@ common_data:
 
     # Install some apps to test GPU/Display
     - [IMAGE_INSTALL:append, " glmark2 kmscube"]
+
+    - [XT_USE_DDK1_11, "%{XT_USE_DDK1_11}"]
+
+    # The bbappends below are only used for old DDK v1.11
+    - [BBMASK:append, " ${@bb.utils.contains('XT_USE_DDK1_11', '1', '', 'meta-xt-rcar-fixups/recipes-kernel/kernel-module-gles/kernel-module-gles.bbappend', d)}"]
+    - [BBMASK:append, " ${@bb.utils.contains('XT_USE_DDK1_11', '1', '', 'meta-xt-rcar-fixups/recipes-graphics/gles-module/gles-user-module.bbappend', d)}"]
+    - [BBMASK:append, " ${@bb.utils.contains('XT_USE_DDK1_11', '1', '', 'meta-xt-rcar-fixups/recipes-graphics/packagegroups/packagegroup-graphic-renesas.bbappend', d)}"]
 
   # The same set of layers and configs is used both in DomD and DomU
   # to build a DDK from source code
@@ -511,6 +519,7 @@ parameters:
       overrides:
         variables:
           XT_DOMA_TAG: "doma"
+          XT_USE_DDK1_11: "1"
         components:
           # Build and install ivi-shell in case of Android builds
           domd:
