meta-aos-tune: remove unneeded meta-aos-tune layer
Updating VIS config is done inside meta-aos layer aos-vis recipe. It doesn't
require any additional adjustment except setting dedicated config variables,
namely:
    * AOS_VIS_PLUGINS - specifies plugins that will be built into Aos VIS
      binary. For prod-devel only storage plugin is needed;
    * AOS_VIS_DATA_PROVIDER - specifies VIS data provider. Currently, two data
      providers are supported: renesassimulatoradapter and
      telemetryemulatorprovider. By default, renesassimulatoradapter is used.

Signed-off-by: Oleksandr Grytsov <oleksandr_grytsov@epam.com>
Acked-by: Volodymyr Babchuk <volodymyr_babchuk@epam.com>

--- a/prod-devel-rcar-agl.yaml
+++ b/prod-devel-rcar-agl.yaml
@@ -699,9 +699,9 @@ parameters:
             builder:
               layers:
                 - "../meta-aos"
-                - "../meta-xt-prod-devel-rcar/meta-aos-tune"
               conf:
-                - [AOS_VIS_PLUGINS, "telemetryemulatoradapter"]
+                - [AOS_VIS_PLUGINS, "storageadapter"]
+                - [AOS_VIS_DATA_PROVIDER, "telemetryemulatoradapter"]
                 - [DISTRO_FEATURES_append, " vis"]
           doma:
             builder:
