doma: Introduced dts for virtio build
For virtio builds we do not need gsx and ion related information in the
dts for DomA, as DomA becomes hardware-independent when using virito.

This patch introduces the virtio-specific DomA dts -
salvator-generic-doma-virtio.dts.

Signed-off-by: Vladyslav Goncharuk <vladyslav_goncharuk@epam.com>

--- a/prod-devel-rcar-virtio.yaml
+++ b/prod-devel-rcar-virtio.yaml
@@ -13,7 +13,7 @@ variables:
   DOMA_DIR: "android"
   DOMZ_DIR: "zephyr"
   XT_DOMD_DTB_NAME: "%{SOC_FAMILY}-%{DOMD_MACHINE}-domd.dtb"
-  XT_DOMA_DTB_NAME: "salvator-generic-doma.dtb"
+  XT_DOMA_DTB_NAME: "salvator-generic-doma-virtio.dtb"
   XT_XEN_DTB_NAME: "%{SOC_FAMILY}-%{DOMD_MACHINE}-xen.dtb"
   XT_PVR_NUM_OSID: "2"
   XT_OP_TEE_FLAVOUR: "generic_dt"
