doma: Introduced dts for virtio build
For virtio builds we do not need gsx and ion related information in the
dts for DomA, as DomA becomes hardware-independent when using virito.

This patch introduces the virtio-specific DomA dts -
salvator-generic-doma-virtio.dts.

Signed-off-by: Vladyslav Goncharuk <vladyslav_goncharuk@epam.com>
Acked-by: Volodymyr Babchuk <volodymyr_babchuk@epam.com>

--- a/meta-xt-prod-devel-rcar-control/recipes-guests/doma/files/virtio.cfg
+++ b/meta-xt-prod-devel-rcar-control/recipes-guests/doma/files/virtio.cfg
@@ -1,3 +1,7 @@
 extra = "loglevel=0 init=/init ro rootwait console=hvc0 cma=256M androidboot.vendor.vehiclehal.server.cid=2 androidboot.vendor.vehiclehal.server.port=9210 androidboot.vendor.vehiclehal.server.psf=/data/data/power.file androidboot.vendor.vehiclehal.server.pss=/data/data/power.socket androidboot.selinux=permissive androidboot.hardware.gralloc=minigbm androidboot.hardware.hwcomposer=drm_minigbm androidboot.hardware.egl=mesa androidboot.boot_devices=10000000.pcie androidboot.fstab_suffix=trout androidboot.hardware=xenvm_trout androidboot.boot_devices=51712 androidboot.selinux=permissive androidboot.android_dt_dir=/proc/device-tree/firmware#1/android/"
 
 device_tree = "/usr/lib/xen/boot/doma.dtb"
+
+dt_passthrough_nodes = [
+    "/firmware",
+]
